# b-daab

.agents/: agent_assets_metadata.toml
.devcontainer/: devcontainer.json
attached_assets/: Pasted--B-DAAB-Bengali-Natural-Language-to-SQL-Benchmark-Pytho_1779595617068.txt  Pasted--B-DAAB-Database-Module-Handles-DuckDB-initialization-s_1779593866847.txt  Pasted--B-DAAB-Evaluation-Metrics-Comprehensive-evaluation-fra_1779593988453.txt  Pasted--B-DAAB-Evaluation-Runner-Orchestrates-evaluation-of-SQ_1779594010023.txt  Pasted--B-DAAB-Logging-Configuration-Provides-comprehensive-lo_1779593924973.txt  Pasted--B-DAAB-Prompt-Management-Handles-prompt-templates-few-_1779593942401.txt  Pasted--B-DAAB-Query-Executor-Executes-SQL-queries-safely-with_1779593891671.txt  Pasted--B-DAAB-SQL-Generation-Agent-Uses-LLMs-to-convert-Benga_1779593961387.txt  Pasted--metadata-version-1-0-0-language-bengali-total-tasks-5-_1779594023296.txt  Pasted--result-error-type-SAFETY-ERROR-logger-error-f-Query-fa_1779593911024.txt  Pasted--usr-bin-env-python3-B-DAAB-CLI-Tool-Command-line-inter_1779593701323.txt
b-daab/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LEADERBOARD.md  LICENSE  README.md  db.py  executor.py  logging_config.py  main.py  pyproject.toml  requirements.txt
b-daab/.github/workflows/: ci.yml
b-daab/agent/: __init__.py  planner.py  prompt.py
b-daab/data/: sample_data.sql  schemas.sql
b-daab/docs/: add_new_tasks.md  error_taxonomy.md  query_examples.md
b-daab/eval/: __init__.py  metrics.py  runner.py
b-daab/scripts/: run_baseline.sh
b-daab/tests/: test_metrics.py  test_query_safety.py  test_sql_normalizer.py
