[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "b-daab"
version = "1.0.0"
description = "Bengali Database as a Benchmark — evaluating Bengali Natural Language to SQL conversion"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "twistedninja02", email = "anuj.eee.00724105131179@aust.edu" }
]
requires-python = ">=3.11"
keywords = ["nlp", "sql", "bengali", "benchmark", "text-to-sql"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "duckdb==0.9.2",
    "anthropic==0.21.0",
    "openai==1.3.0",
    "requests==2.31.0",
    "tabulate==0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "black==23.12.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
]

[project.scripts]
b-daab = "main:main"

[project.urls]
Homepage = "https://github.com/twistedninja02/b-daab"
Repository = "https://github.com/twistedninja02/b-daab"
Issues = "https://github.com/twistedninja02/b-daab/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "eval*"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
verbosity = 2
